small fix, could not figure out the misaligned images

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 	--box-1: #cdcdcd;
 	--box-2: #b5b5b5;
 	--footer-header: #000;
+	--header-z-index: 10;
 }
 
 /* reset default browser styles */
@@ -75,7 +76,7 @@ a {
 	background-image: url("images/header.jpg");
 	background-size: cover;
 	width: 100%;
-	height: 50vh;
+	height: 500px;
 }
 
 .banner-img {
@@ -110,7 +111,12 @@ a {
 }
 
 .btn {
-	background-image: linear-gradient(45deg, var(--accent) 9.16%, #973dc0 43.89%, var(--accent) 64.72%);
+	background-image: linear-gradient(
+		45deg,
+		var(--accent) 9.16%,
+		#973dc0 43.89%,
+		var(--accent) 64.72%
+	);
 	border-radius: 10px;
 	border-style: none;
 	box-sizing: border-box;
@@ -239,9 +245,9 @@ header {
 	top: 0;
 	background-color: #fff;
 	border-bottom: 1px var(--accent) solid;
+	z-index: var(--header-z-index);
 }
 
-#header-container,
 #footer-container {
 	margin-top: 2px;
 }
@@ -321,8 +327,7 @@ footer {
 }
 
 .home-info-box img {
-	object-fit: cover;
-	aspect-ratio: 16/9;
+	height: 300px;
 	border-radius: 10px 10px 0px 0px;
 }
 
@@ -337,7 +342,6 @@ footer {
 	object-fit: cover;
 	height: 250px;
 }
-
 
 #home-images img {
 	object-fit: cover;
@@ -437,7 +441,7 @@ footer {
 	transition: transform 0.5s ease;
 }
 
-@media only screen and (min-width: 576px) {
+@media only screen and (min-width: 768px) {
 	/* columns subtract the width of the gap specified by .flex from their own width */
 
 	.col {
@@ -494,7 +498,7 @@ footer {
 }
 
 /* mobile only classes */
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 768px) {
 	.mb-col {
 		width: calc((1 / 12) * 100% - 1vw);
 	}
